--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="virtual resume" content="Robert Osial - personal homepage" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-  <title>Personal Homepage</title>
+  <title>Robert Osial - Frontend Developer (React)</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
